--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>   
         </div>
 
-        <div class="second-app slide_wrapper">
+        <!-- <div class="second-app slide_wrapper">
                 <img class="slide-main" src="" alt="">
                 <div class="slide-controls">
                     <div class="slides"></div>
@@ -85,7 +85,7 @@
                 <div class="tile"></div>
                 <div class="tile"></div>
             </div>
-        </div>
+        </div> -->
     </div>
     <footer>
     </footer>
